--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=SamsTrack
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/attendance?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/attendance
+
 spring.datasource.username=root
 spring.datasource.password=shubham
 
