--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=SamsTrack
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/attendance
+#spring.datasource.url=jdbc:mysql://localhost:3306/attendance?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/attendance
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/attendance
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 spring.datasource.username=root
 spring.datasource.password=shubham
@@ -9,6 +13,8 @@ spring.datasource.password=shubham
 # JPA/Hibernate Auto Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
