--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.application.name=SamsTrack
 # MySQL Database Configuration
 #spring.datasource.url=jdbc:mysql://localhost:3306/attendance?createDatabaseIfNotExist=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/attendance
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/attendance
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/attendance?useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/attendance
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
@@ -17,5 +18,10 @@ spring.jpa.show-sql=true
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
 
 server.port=8080
