--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,13 @@ spring.application.name=SamsTrack
 # MySQL Database Configuration
 #spring.datasource.url=jdbc:mysql://localhost:3306/attendance?createDatabaseIfNotExist=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/attendance
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/attendance?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=${DB_URL}
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/attendance
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.datasource.username=root
-spring.datasource.password=shubham
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA/Hibernate Auto Configuration
 spring.jpa.hibernate.ddl-auto=update
