--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
         <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+</dependency>
     <!-- MySQL Connector Java -->
     <dependency>
         <groupId>mysql</groupId>
