--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=SamsTrack
 
 # MySQL Database Configuration
 #spring.datasource.url=jdbc:mysql://localhost:3306/attendance?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://localhost:3306/attendance
+spring.datasource.url=jdbc:mysql://localhost:3306/attendance?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/attendance
 #spring.datasource.url=${DB_URL}
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/attendance
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
