--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,23 +2,32 @@ spring.application.name=SamsTrack
 
 # MySQL Database Configuration
 #spring.datasource.url=jdbc:mysql://localhost:3306/attendance?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://localhost:3306/attendance?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/attendance?useSSL=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://localhost:3306/attendance
 #spring.datasource.url=${DB_URL}
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/attendance
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.datasource.username=root
-spring.datasource.password=shubham
+#spring.datasource.username=root
+#spring.datasource.password=shubham
 
 # JPA/Hibernate Auto Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+spring.datasource.url=jdbc:postgresql://aws-0-ap-south-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.nkbfvxyyubffpahzssqn
+spring.datasource.password=Pass@1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA & Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=30000
