--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=30000
