--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,10 +29,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.connection-timeout=30000
+#spring.datasource.hikari.connection-timeout=30000
+#spring.datasource.hikari.idle-timeout=30000
+#spring.datasource.hikari.max-lifetime=1800000
+
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
 
 server.port=8080
 debug=true
